assets/notices.css
#screen-entrepot-notices-wrap {
	overflow: auto;
	margin-left: 0 !important;
	margin: 0;
	position: relative;
}

#entrepot-notices-back {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 150px;
	right: 0;
	border: 1px solid #e1e1e1;
	border-top: none;
	border-bottom: none;
	background: #fff;
}

#entrepot-notices-columns {
	position: relative;
}

#screen-entrepot-notices-wrap .contextual-help-tabs ul li {
	background: #fff;
}

#screen-entrepot-notices-wrap .contextual-help-tabs ul li.upgrade {
	border-left-color: #ffba00;
}

#screen-entrepot-notices-wrap .contextual-help-tabs ul li.updated {
	border-left-color: #46b450;
}

#screen-entrepot-notices-wrap .contextual-help-tabs ul li.error {
	border-left-color: #dc3232;
}

#screen-entrepot-notices-wrap .contextual-help-tabs ul li a:focus {
	-webkit-box-shadow: none;
	box-shadow: none;
	outline: none;
}

#entrepot-notices-link-wrap {
	float: right;
	height: 28px;
	margin: 0 0 0 6px;
	border: 1px solid #ddd;
	border-top: none;
	background: #fff;
	-webkit-box-shadow: 0 1px 1px -1px rgba(0,0,0,0.1);
	box-shadow: 0 1px 1px -1px rgba(0,0,0,0.1);
}

#entrepot-notices-link-wrap .count,
#screen-entrepot-notices-wrap .count {
	display: inline-block;
	background-color: #0073aa;
	color: #fff;
	font-size: 9px;
	line-height: 17px;
	font-weight: 600;
	margin: -1px 0 0 2px;
	vertical-align: text-top;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	z-index: 26;
	padding: 0 6px;
}

#screen-entrepot-notices-wrap .upgrade .count {
	background-color: #ffba00;
}

#screen-entrepot-notices-wrap .updated .count {
	background-color: #46b450;
}

#screen-entrepot-notices-wrap .error .count {
	background-color: #dc3232;
}

.entrepot-notice-trashable {
	position: relative;
}

.entrepot-notice-trash:before {
	background: none;
	color: #dc3232;
	content: "\f182";
	display: block;
	font: normal 16px/20px dashicons;
	speak: none;
	height: 20px;
	text-align: center;
	vertical-align: top;
	width: 20px;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.entrepot-notice-trash {
	position: absolute;
	top: -2px;
	right: -30px;
	border: none;
	margin: 0;
	padding-left: 9px;
	background: none;
	color: #dc3232;
	cursor: pointer;
}

